Added link for ability to add game sessions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,5 +5,6 @@
 </div>
 
 <a href="/add-game">Add Game</a>
+<a href="/add-game-session">Add Game Session</a>
 
 <%- include ('partials/footer.ejs') %>
