Adding buttons instead of just text links

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs') %>
 
-<a href="/add-game">Add Game</a>
-<a href="/add-game-session">Add Game Session</a>
+<button onclick="location.href='/add-game'">Add Game</button>
+<button onclick="location.href='/add-game-session'">Add Game Session</button>
 
 <div>
 	<ul>
