Loading both my games list and game sessions on the home page... not a req but i would want this if i were actually making the site

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,11 @@
 			<li><%= games[i].game_name %></li>
 		<% } %>
 	</ul>
+	<ul>
+		<% for (var i = 0; i < gameSessions.length; i++) { %>
+			<li><%= gameSessions[i].game_session_start_date %></li>
+		<% } %>
+	</ul>
 </div>
 
 
