--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header.ejs') %>
 
 <div style="display: flex; justify-content: space-between;">
-	<div style="width: 45%;">
+	<div style="width: 45%; border: 2px solid #ddd; border-radius: 10px; padding: 10px;">
 		<h1>Games</h1>
 		<button onclick="location.href='/add-game'">Add Game</button>
 		<ul>
@@ -10,12 +10,12 @@
 			<% } %>
 		</ul>
 	</div>
-	<div style="width: 45%;">
+	<div style="width: 45%; border: 2px solid #ddd; border-radius: 10px; padding: 10px;">
 		<h1>Game Sessions</h1>
 		<button onclick="location.href='/add-game-session'">Add Game Session</button>
 		<ul>
 			<% for (var i = 0; i < gameSessions.length; i++) { %>
-				<li><%= gameSessions[i].game_session_start_date %></li>
+				<li><%= gameSessions[i].game_session_start_date.toLocaleString('en-US', { timeZone: 'UTC', hourCycle: 'h12', hour12: true }).slice(0, -6) %> <%= gameSessions[i].game_session_start_date.toLocaleString('en-US', { timeZone: 'UTC', hourCycle: 'h12', hour12: true }).slice(-2) %></li>
 			<% } %>
 		</ul>
 	</div>
