Added a background and changed txt color; need to make a css file tomorrow before doing any more aesthetics

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,14 @@
 <%- include('partials/header.ejs') %>
 
+<style>
+body {
+  background-image: url('https://cdn.dribbble.com/users/5946079/screenshots/15259180/playing-background-design-1600-x-1200_4x.jpg');
+  background-size: cover;
+  color: white;
+}
+</style>
+
+
 <div style="display: flex; justify-content: space-between;">
 	<div style="width: 45%; border: 2px solid #ddd; border-radius: 10px; padding: 10px;">
 	    <h1>Games</h1>
