--- a/views/add-game.ejs
+++ b/views/add-game.ejs
@@ -3,6 +3,7 @@
 <form method="post" action="/add-game">
 	<label for="name">Name:</label>
 	<input type="text" name="name" id="name">
+	<button type="submit">Add Game</button>
 </form>
 
 <%- include ('partials/footer.ejs') %>
