--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@ body {
 	                <th>Name</th>
 	                <th>Last Played</th>
 	                <th>Edit</th>
+	                <th>Delete</th>
 	            </tr>
 	        </thead>
 	        <tbody>
@@ -27,6 +28,7 @@ body {
 	                    <td><%= games[i].game_name %></td>
 	                    <td><%= games[i].last_played ? games[i].last_played.toLocaleString('en-US', { timeZone: 'UTC', hourCycle: 'h12', hour12: true }) : '' %></td>
 	                	<td><button onclick="location.href='/edit-game/<%= games[i].game_id %>'">Edit</button></td>
+	                	<td><button onclick="location.href='/delete-game/<%= games[i].game_id %>'">Delete</button></td>
 	                </tr>
 	            <% } %>
 	        </tbody>
