--- a/views/delete-game-session.ejs
+++ b/views/delete-game-session.ejs
@@ -1,8 +1,9 @@
 <%- include ('partials/header.ejs') %>
 
 <h1>You are about to delete session <%= gameSession.game_session_id %></h1>
-	<form method="post" action="/delete-game-session/<%= gameSession.game_session_id %>">
-		<button type="submit">Delete Game Session</button>
+	<form method="POST" action="/delete-game-session/<%= gameSession.game_session_id %>">
+		<button type="submit" name="delete" value="Yes">Yes</button>
+		<button type="submit" name="delete" value="No">No</button>
 	</form>
 
 <%- include ('partials/footer.ejs') %>
