--- a/views/edit-game-session.ejs
+++ b/views/edit-game-session.ejs
@@ -1,10 +1,11 @@
 <%- include ('partials/header.ejs') %>
 
-<h1>You are about to change id: <%= gameSession.game_session_id %>, name: <%= gameSession.game_name %>, start time: <%= gameSession.game_session_start_date %> </h1>
-	<form method="post" action="/edit-game-session/<%= gameSession.game_session_id %>">
-	    <label for="startDate">Start date:</label>
-	    <input type="datetime-local" name="startDate" id="startDate"><br><br>
-		<button type="submit">Edit Game Session</button>
-	</form>
+<h1> Edit Game Session </h1>
+	<p>You are about to change id: <%= gameSession.game_session_id %>, name: <%= gameSession.game_name %>, start time: <%= gameSession.game_session_start_date %> </p>
+		<form method="post" action="/edit-game-session/<%= gameSession.game_session_id %>">
+		    <label for="startDate">Start date:</label>
+		    <input type="datetime-local" name="startDate" id="startDate"><br><br>
+			<button type="submit">Edit Game Session</button>
+		</form>
 
 <%- include ('partials/footer.ejs') %>
