--- a/views/edit-game-session.ejs
+++ b/views/edit-game-session.ejs
@@ -4,7 +4,7 @@
 	<p>You are about to change id: <%= gameSession.game_session_id %>, name: <%= gameSession.game_name %>, start time: <%= gameSession.game_session_start_date %> </p>
 		<form method="post" action="/edit-game-session/<%= gameSession.game_session_id %>">
 		    <label for="startDate">Start date:</label>
-		    <input type="datetime-local" name="startDate" id="startDate"><br><br>
+		    <input type="datetime-local" name="startDate" id="startDate" required><br><br>
 			<button type="submit">Edit Game Session</button>
 		</form>
 
