--- a/views/add-game.ejs
+++ b/views/add-game.ejs
@@ -2,7 +2,7 @@
 
 <form method="post" action="/add-game">
 	<label for="name">Name:</label>
-	<input type="text" name="name" id="name">
+	<input type="text" name="name" id="name" required>
 	<button type="submit">Add Game</button>
 </form>
 
