--- a/views/add-game-session.ejs
+++ b/views/add-game-session.ejs
@@ -9,9 +9,9 @@
             <option value="<%= games[i].game_id %>"><%= games[i].game_name %></option>
         <% } %>
     </select><br><br>
-    
+
     <label for="startDate">Start date:</label>
-    <input type="datetime-local" name="startDate" id="startDate"><br><br>
+    <input type="datetime-local" name="startDate" id="startDate" required><br><br>
     <input type="submit" value="Add Game Session">
 </form>
 
