--- a/views/add-game-session.ejs
+++ b/views/add-game-session.ejs
@@ -3,8 +3,8 @@
 <h1>Add game session</h1>
 
 <form method="POST" action="/add-game-session">
-    <label for="game">Game:</label>
-    <select name="game" id="game">
+    <label for="game_id">Game:</label>
+    <select name="game_id" id="game_id">
         <% for (var i = 0; i < games.length; i++) { %>
             <option value="<%= games[i].game_id %>"><%= games[i].game_name %></option>
         <% } %>
