--- a/views/add-game.ejs
+++ b/views/add-game.ejs
@@ -1,8 +1,12 @@
 <%- include ('partials/header.ejs') %>
 
+<h1>Add Game</h1>
+
 <form method="post" action="/add-game">
 	<label for="name">Name:</label>
 	<input type="text" name="name" id="name" required>
+	<label for="image_url">Image URL:</label>
+	<input type="url" name="image_url" id="image_url">
 	<button type="submit">Add Game</button>
 </form>
 
