--- a/views/add-game-session.ejs
+++ b/views/add-game-session.ejs
@@ -8,7 +8,8 @@
         <% for (var i = 0; i < games.length; i++) { %>
             <option value="<%= games[i].game_id %>"><%= games[i].game_name %></option>
         <% } %>
-    </select><br><br>
+    </select>
+    <br><br>
 
     <label for="startDate">Start date:</label>
     <input type="datetime-local" name="startDate" id="startDate" required><br><br>
