--- a/views/edit-game.ejs
+++ b/views/edit-game.ejs
@@ -1,9 +1,20 @@
 <%- include ('partials/header.ejs') %>
 
 <h1>You are about to change <%= game.game_name %></h1>
+
+<h3>How To Upload Image:</h3>
+<ol>
+  <li>Search for image on Google</li>
+  <li>Right click on image</li>
+  <li>Select "Copy Image Address"</li>
+  <li>Paste into URL textbox</li>
+</ol>
+
 	<form method="post" action="/edit-game/<%= game.game_id %>">
 		<label for="name">New Name:</label>
-		<input type="text" name="name" id="name" required>
+		<input type="text" name="name" id="name" value="<%= game.game_name %>" required>
+		<label for="image_url">New Image URL (can be blank):</label>
+		<input type="text" name="image_url" id="image_url" value="<%= game.game_image %>">
 		<button type="submit">Edit Game</button>
 	</form>
 
