--- a/views/edit-game-session.ejs
+++ b/views/edit-game-session.ejs
@@ -1,11 +1,22 @@
 <%- include ('partials/header.ejs') %>
 
-<h1> Edit Game Session </h1>
-	<p>You are about to change id: <%= gameSession.game_session_id %>, name: <%= gameSession.game_name %>, start time: <%= gameSession.game_session_start_date %> </p>
-		<form method="post" action="/edit-game-session/<%= gameSession.game_session_id %>">
-		    <label for="startDate">Start date:</label>
-		    <input type="datetime-local" name="startDate" id="startDate" required><br><br>
-			<button type="submit">Edit Game Session</button>
-		</form>
+<h1>Edit Game Session</h1>
+
+    <p>You are about to change id: <%= gameSession.game_session_id %>, name: <%= gameSession.game_name %>, start time: <%= gameSession.game_session_start_date %> </p>
+
+	<form method="post" action="/edit-game-session/<%= gameSession.game_session_id %>">
+	    <label for="gameSelect">Game:</label>
+	    <select name="gameSelect" id="gameSelect" required>
+	        <% for (var i = 0; i < games.length; i++) { %>
+	            <option value="<%= games[i].game_id %>" <%= games[i].game_id == gameSession.game_id ? 'selected' : '' %>><%= games[i].game_name %></option>
+	        <% } %>
+	    </select>
+	    <br><br>
+
+	    <label for="startDate">Start date:</label>
+		<input type="datetime-local" name="startDate" id="startDate" value="<%= gameSession.game_session_start_date.toISOString().slice(0, 16) %>" required><br><br>
+	    
+	    <input type="submit" value="Edit Game Session">
+	</form>
 
 <%- include ('partials/footer.ejs') %>
