updated to use the `title` property returned in res.render and the partials/header code (assuming you wanted me to use that)

--- a/views/add-game-session.ejs
+++ b/views/add-game-session.ejs
@@ -1,6 +1,6 @@
 <%- include ('partials/header.ejs') %>
 
-<h1>Add game session</h1>
+<h1><%= title %></h1>
 
 <form method="POST" action="/add-game-session">
     <label for="game_id">Game:</label>
