--- a/views/edit-game-session.ejs
+++ b/views/edit-game-session.ejs
@@ -1,6 +1,6 @@
 <%- include ('partials/header.ejs') %>
 
-<h1>Edit Game Session</h1>
+<h1><%= title %></h1>
 
     <p>You are about to change id: <%= gameSession.game_session_id %>, name: <%= gameSession.game_name %>, start time: <%= gameSession.game_session_start_date %> </p>
 
