--- a/views/edit-game.ejs
+++ b/views/edit-game.ejs
@@ -1,6 +1,8 @@
 <%- include ('partials/header.ejs') %>
 
-<h1>You are about to change <%= game.game_name %></h1>
+<h1><%= title %></h1>
+
+<h2>You are about to change <%= game.game_name %></h2>
 
 <h3>How To Upload Image:</h3>
 <ol>
