--- a/views/delete-game.ejs
+++ b/views/delete-game.ejs
@@ -1,6 +1,6 @@
 <%- include ('partials/header.ejs') %>
 
-<h1>Delete Game</h1>
+<h1><%= title %></h1>
 
 	<p>Are you sure you want to delete <%= game.game_name %>?</p>
 
