adding some comments

--- a/views/add-game.ejs
+++ b/views/add-game.ejs
@@ -10,7 +10,7 @@
   <li>Paste into URL textbox</li>
 </ol>
 
-<form method="post" action="/add-game">
+<form method="POST" action="/add-game">
 	<label for="name">Name:</label>
 	<input type="text" name="name" id="name" required>
 	<label for="image_url">Image URL (can be blank):</label>
