--- a/views/edit-game-session.ejs
+++ b/views/edit-game-session.ejs
@@ -4,7 +4,7 @@
 
     <p>You are about to change id: <%= gameSession.game_session_id %>, name: <%= gameSession.game_name %>, start time: <%= gameSession.game_session_start_date %> </p>
 
-	<form method="post" action="/edit-game-session/<%= gameSession.game_session_id %>">
+	<form method="POST" action="/edit-game-session/<%= gameSession.game_session_id %>">
 	    <label for="gameSelect">Game:</label>
 	    <select name="gameSelect" id="gameSelect" required>
 	        <% for (var i = 0; i < games.length; i++) { %>
