--- a/views/edit-game.ejs
+++ b/views/edit-game.ejs
@@ -12,7 +12,7 @@
   <li>Paste into URL textbox</li>
 </ol>
 
-	<form method="post" action="/edit-game/<%= game.game_id %>">
+	<form method="POST" action="/edit-game/<%= game.game_id %>">
 		<label for="name">New Name:</label>
 		<input type="text" name="name" id="name" value="<%= game.game_name %>" required>
 		<label for="image_url">New Image URL (can be blank):</label>
